--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           </div>
           <div class="card-footer">
             <button id="generate" class="btn">Generate Password</button>
+            <div id="error"></div>
         </div>
         </div>
       </div>
