Removed stray character in HTML

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
           <div class="form-group">
 
-            <!-- Password length slider -->`
+            <!-- Password length slider -->
             <div class="span2">
               <!-- Make the length-value a typable field so that users can type in custom values easily -->
               <label for="length" id="length-label">Password length: <input id="length-value" placeholder="8"></label>
