--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
-          <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+          <div style="position: relative">
+            <div class="copy">
+              <div id="copytext">Click to copy to clipboard</div>
+              <div id="copyresult" class="fade-out">Copied!</div>
+            </div>
+            <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+          </div>
+
           <div class="form-group">
 
             <!-- Password length slider -->
