Made copy message initially hidden

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="card-body">
           <div style="position: relative">
-            <div class="copy">
+            <div class="copy invisible">
               <div id="copytext">Click to copy to clipboard</div>
               <div id="copyresult" class="fade-out">Copied!</div>
             </div>
