Styled copy message, adjusted text and fade out timing

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="card-body">
           <div style="position: relative">
             <div class="copy invisible">
-              <div id="copytext">Click to copy to clipboard</div>
-              <div id="copyresult" class="fade-out">Copied!</div>
+              <div id="copytext">Click to copy</div>
+              <div id="copyresult" class="fade-out">Copied to clipboard!</div>
             </div>
             <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
           </div>
