Added aria label to password length numeric input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Password length slider -->
             <div class="span2">
               <!-- Make the length-value a typable field so that users can type in custom values easily -->
-              <label for="length" id="length-label">Password length: <input id="length-value" placeholder="8"></label>
+              <label for="length" id="length-label">Password length<input id="length-value" aria-label="Password length numeric input" placeholder="8"></label>
               <input type="range" min="8" max="128" value="8" class="form-control-range" id="length"/>
             </div>
 
