--- a/index.html
+++ b/index.html
@@ -40,33 +40,35 @@
 
           <div class="form-group">
 
-            <!-- Password length slider -->
-            <div class="span2">
+            <div class="form-item span2">
               <!-- Make the length-value a typable field so that users can type in custom values easily -->
               <label for="length" id="length-label">Password length<input id="length-value" aria-label="Password length numeric input" placeholder="8"></label>
+            </div>
+            <!-- Password length slider -->
+            <div class="form-item span2 short-margin">
               <input type="range" min="8" max="128" value="8" class="form-control-range" id="length"/>
             </div>
 
             <!-- lowercase char set toggle -->
-            <div>
+            <div class="form-item span1">
               <input type="checkbox" class="form-check-input" id="lowercase" checked/>
               <label for="lowercase" class="form-check-label">Include lowercase letters</label>
             </div>
 
             <!-- uppercase char set toggle -->
-            <div>
+            <div class="form-item span1">
               <input type="checkbox" class="form-check-input" id="uppercase" checked/>
               <label for="uppercase" class="form-check-label">Include uppercase letters</label>
             </div>
 
             <!-- numeric char set toggle -->
-            <div>
+            <div class="form-item span1">
               <input type="checkbox" class="form-check-input" id="numeric" checked/>
               <label for="numeric" class="form-check-label">Include numbers</label>
             </div>
 
             <!-- special char set toggle -->
-            <div>
+            <div class="form-item span1">
               <input type="checkbox" class="form-check-input" id="special" checked/>
               <label for="special" class="form-check-label">Include special characters</label>
             </div>
