--- a/index.html
+++ b/index.html
@@ -36,51 +36,83 @@
             <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
           </div>
 
-          <div class="form-group">
+          <!-- Settings modal -->
+          <dialog data-modal class="modal">
+  
+          </dialog>
 
-            <div class="form-item span2">
-              <input type="checkbox" class="form-check-input" id="quick-menu"/>
-              <label for="quick-menu" class="form-check-label">Show quick settings menu</label>
-            </div>
+          <!-- TODO: Reduce number of redundant classes in form elements -->
 
-            <div class="form-item span2 quick-setting hidden">
-              <!-- Make the length-value a typable field so that users can type in custom values easily -->
-              <label for="length" id="length-label">Password length<input id="length-value" aria-label="Password length numeric input" placeholder="8"></label>
-            </div>
-            <!-- Password length slider -->
-            <div class="form-item span2 short-margin quick-setting hidden">
-              <input type="range" min="8" max="128" value="8" class="form-control-range" id="length"/>
-            </div>
-
-            <!-- lowercase char set toggle -->
-            <div class="form-item span1 quick-setting hidden">
-              <input type="checkbox" class="form-check-input" id="lowercase" checked/>
-              <label for="lowercase" class="form-check-label">Include lowercase letters</label>
-            </div>
-
-            <!-- uppercase char set toggle -->
-            <div class="form-item span1 quick-setting hidden">
-              <input type="checkbox" class="form-check-input" id="uppercase" checked/>
-              <label for="uppercase" class="form-check-label">Include uppercase letters</label>
-            </div>
-
-            <!-- numeric char set toggle -->
-            <div class="form-item span1 quick-setting hidden">
-              <input type="checkbox" class="form-check-input" id="numeric" checked/>
-              <label for="numeric" class="form-check-label">Include numbers</label>
-            </div>
-
-            <!-- special char set toggle -->
-            <div class="form-item span1 quick-setting hidden">
-              <input type="checkbox" class="form-check-input" id="special" checked/>
-              <label for="special" class="form-check-label">Include special characters</label>
-            </div>
-
+          <!-- Quick settings menu toggle -->
+          <div class="quick-setting-toggle">
+            <input type="checkbox" id="quick-menu"/>
+            <label for="quick-menu">Show quick settings menu</label>
           </div>
+
+          <div class="settings">
+            <div class="form-group">
+              <!-- Prompt text for when user is in sequential mode -->
+              <div class="settings-desc password-length hidden">
+                <p>How many characters long should the password be?</p>
+              </div>
+              <div class="form-item span2 quick-setting password-length hidden">
+                <!-- Make the length-value a typable field so that users can type in custom values easily -->
+                <label for="length" id="length-label">Password length<input id="length-value" aria-label="Password length numeric input" placeholder="8"></label>
+              </div>
+              <!-- Password length slider -->
+              <div class="form-item span2 short-margin quick-setting password-length hidden">
+                <input type="range" min="8" max="128" value="8" class="form-control-range" id="length"/>
+              </div>
+  
+              <!-- Character Sets -->
+  
+              <!-- Prompt text for when user is in sequential mode -->
+              <div class="settings-desc charset hidden">
+                <p>What character sets should the password include?</p>
+              </div>
+  
+              <!-- lowercase char set toggle -->
+              <div class="form-item span1 quick-setting hidden charset">
+                <input type="checkbox" class="form-check-input" id="lowercase" checked/>
+                <label for="lowercase" class="form-check-label">Include lowercase letters</label>
+              </div>
+  
+              <!-- uppercase char set toggle -->
+              <div class="form-item span1 quick-setting hidden charset">
+                <input type="checkbox" class="form-check-input" id="uppercase" checked/>
+                <label for="uppercase" class="form-check-label">Include uppercase letters</label>
+              </div>
+  
+              <!-- numeric char set toggle -->
+              <div class="form-item span1 quick-setting hidden charset">
+                <input type="checkbox" class="form-check-input" id="numeric" checked/>
+                <label for="numeric" class="form-check-label">Include numbers</label>
+              </div>
+  
+              <!-- special char set toggle -->
+              <div class="form-item span1 quick-setting hidden charset">
+                <input type="checkbox" class="form-check-input" id="special" checked/>
+                <label for="special" class="form-check-label">Include special characters</label>
+              </div>
+  
+              <!-- Next button for when the user is in sequential mode -->
+              <div class="span2 next-button hidden">
+                <button id="next" class="btn">Next</button>
+              </div>
+
+              <!-- Final generate button for sequential mode -->
+              <div class="span2 finish-button hidden">
+                <button id="finish-questions" class="btn">Finish</button>
+              </div>
+  
+            </div>
+          </div>
+
+
           <div class="card-footer">
             <button id="generate" class="btn">Generate Password</button>
             <div id="error"></div>
-        </div>
+          </div>
         </div>
       </div>
     </div>
