Matched modal styling to rest of page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <!-- Settings modal -->
-          <dialog data-modal class="modal">
+          <dialog data-modal class="modal card">
   
           </dialog>
 
